<resources>
    <string name="app_name">HotelManagement</string>
    <string name="hotel_management_system">Hotel Management System</string>
    <string name="splash_icon">splash_icon</string>
    <string name="login_logo">login_logo</string>
    <string name="meritus_pelangi_beach_resort_spa">Meritus Pelangi Beach Resort Spa</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="help">Help</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="user_logo">user_logo</string>
    <string name="selected_item">Selected item:</string>
    <string name="i_ve_read_and_agree_the_term_of_use_amp_privacy_policy"><![CDATA[I\'ve read and agree the Term of Use & Privacy Policy]]></string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="job_position">Job Position :</string>
    <string name="email_address">Email Address :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="ic_number">IC Number :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="home_address">Home Address :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="register">Register</string>
    <string name="staff_registration_form">Staff Registration Form</string>
    <string name="Password">Password :</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Pass">Password</string>
    <string name="Email_address">Email Address</string>
    <string name="Ic_number">IC Number</string>
    <string name="address">Address</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="Username">Username</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="staff_id">Staff ID :</string>
    <string name="profile_pic">profile_pic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="position">Position</string>
    <string name="fID">--</string>
    <string name="fEmail">--</string>
    <string name="fPhone">--</string>
    <string name="fBirth">--</string>
    <string name="fAddress">--</string>
    <string name="fUser">--</string>
    <string name="eye">eye</string>
    <string name="fJob">--</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="spinnerResult">--</string>
    <string-array name="Job">
        <item>Staff</item>
        <item>Manager</item>
        <item>Receptionist</item>
        <item>Cleaner</item>
    </string-array>
</resources>