<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Signup_Page">

        <TextView
            android:id="@+id/lblBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/date_of_birth"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblIC" />

        <TextView
            android:id="@+id/lblConPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPass" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/email_address"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblJob" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/staff_registration_form"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/first_name"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/last_name"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblFirstName" />

        <TextView
            android:id="@+id/lblJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/job_position"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLastName" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

        <TextView
            android:id="@+id/lblPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/Password"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

        <TextView
            android:id="@+id/lblIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/ic_number"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblConPass" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:text="@string/home_address"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblBirth" />


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:hint="@string/Email_address"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/lblEmail"
            app:layout_constraintStart_toEndOf="@+id/lblEmail"
            app:layout_constraintTop_toTopOf="@+id/lblEmail" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Phone_number"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/lblPhone"
            app:layout_constraintStart_toEndOf="@+id/lblPhone"
            app:layout_constraintTop_toTopOf="@+id/lblPhone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtBirth"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:drawableEnd="@drawable/ic_calendar"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Date_of_birth"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="date"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/lblBirth"
            app:layout_constraintStart_toEndOf="@+id/lblBirth"
            app:layout_constraintTop_toTopOf="@+id/lblBirth"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Pass"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/lblPass"
            app:layout_constraintStart_toEndOf="@+id/lblPass"
            app:layout_constraintTop_toTopOf="@+id/lblPass"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtConPass"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Confirm_password"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/lblConPass"
            app:layout_constraintStart_toEndOf="@+id/lblConPass"
            app:layout_constraintTop_toTopOf="@+id/lblConPass"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtIC"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Ic_number"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/lblIC"
            app:layout_constraintStart_toEndOf="@+id/lblIC"
            app:layout_constraintTop_toTopOf="@+id/lblIC"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/First_name"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/lblFirstName"
            app:layout_constraintStart_toEndOf="@+id/lblFirstName"
            app:layout_constraintTop_toTopOf="@+id/lblFirstName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/Last_name"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/lblLastName"
            app:layout_constraintStart_toEndOf="@+id/lblLastName"
            app:layout_constraintTop_toTopOf="@+id/lblLastName" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="140dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/lblJob"
            app:layout_constraintStart_toEndOf="@+id/lblJob"
            app:layout_constraintTop_toTopOf="@+id/lblJob" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="204dp"
            android:layout_height="85dp"
            android:layout_marginStart="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/address"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/lblAddress"
            app:layout_constraintStart_toEndOf="@+id/lblAddress"
            app:layout_constraintTop_toTopOf="@+id/lblAddress"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/chkTerm"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/i_ve_read_and_agree_the_term_of_use_amp_privacy_policy"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkTerm" />

        <TextView
            android:id="@+id/lblResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/spinnerResult"
            android:textColor="#000000"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/spinner" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

